@@ -3669,6 +3669,13 @@ char * CWebServer::GetJSonPage()
 				}
 				ii++;
 			}
+			if (dType==pTypeYouLess)
+			{
+				root["result"][ii]["val"]=NTYPE_USAGE;
+				root["result"][ii]["text"]=Notification_Type_Desc(NTYPE_USAGE,0);
+				root["result"][ii]["ptag"]=Notification_Type_Desc(NTYPE_USAGE,1);
+				ii++;
+			}
 			if ((dType==pTypeCURRENT)&&(dSubType==sTypeELEC1))
 			{
 				root["result"][ii]["val"]=NTYPE_AMPERE1;
